# miller

./: Cargo.toml  LICENSE  README.adoc  gamelog.ron
.github/: dependabot.yml
gamelog/: Cargo.toml
gamelog/src/: action.rs  error.rs  event.rs  file.rs  game.rs  lib.rs  period.rs  play.rs  score.rs  terrain.rs
miller/: Cargo.toml
miller/src/: main.rs  tui.rs
src/: error.rs  gamelog.rs  main.rs
src/gamelog/: file.rs  mod.rs  period.rs  play.rs  terrain.rs
src/gamelog/src/: lib.rs  period.rs  terrain.rs
templates/: logfile.ron
