[package]
name = "miller"
version = "0.1.0"
edition = "2024"
license = "MIT"
license-file = "LICENSE"

[dependencies]
ron = "0.9"

[dependencies.semver]
version = "1.0"
features = ["serde"]

[dependencies.clap]
version = "4.5"
default-features = false
features = [
    # From default features collection
    "error-context",
    "help",
    "std",
    "suggestions",
    "usage",

    # Optional features
    "derive",
    "string",
]

[dependencies.serde]
version = "1.0"
features = ["derive"]
