[package]
name = "miller"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies.clap]
version = "4.5"
default-features = false
features = [
    # From default features collection
    "error-context",
    "help",
    "std",
    "suggestions",
    "usage",

    # Optional features
    "derive",
    "string",
]

[dependencies.gamelog]
path = "../gamelog"
